@@ -1,0 +1,5 @@
+package URI::_ado;
+use base 'URI::_odbc';
+our $VERSION = '0.17';
+
+sub dbi_driver   { 'ADO' }
