@@ -212,43 +212,43 @@ for my $spec (
     },
     {
         uri => 'db:mssql:',
-        dsn => 'dbi:ODBC:',
+        dsn => 'dbi:ADO:',
         dbi => [ [DSN => undef] ],
         qry => [],
     },
     {
         uri => 'db:mssql:dbadmin',
-        dsn => 'dbi:ODBC:DSN=dbadmin',
+        dsn => 'dbi:ADO:DSN=dbadmin',
         dbi => [ [DSN => 'dbadmin'] ],
         qry => [],
     },
     {
         uri => 'db:mssql://localhost',
-        dsn => 'dbi:ODBC:Server=localhost;Port=1433',
+        dsn => 'dbi:ADO:Server=localhost;Port=1433',
         dbi => [ [Server => 'localhost'], [Port => 1433], [Database => undef] ],
         qry => [],
     },
     {
         uri => 'db:mssql://localhost:33',
-        dsn => 'dbi:ODBC:Server=localhost;Port=33',
+        dsn => 'dbi:ADO:Server=localhost;Port=33',
         dbi => [ [Server => 'localhost'], [Port => 33], [Database => undef] ],
         qry => [],
     },
     {
         uri => 'db:mssql://foo:123/try?foo=1&foo=2&lol=yes&Driver=HPMssql',
-        dsn => 'dbi:ODBC:Server=foo;Port=123;Database=try;foo=1;foo=2;lol=yes;Driver=HPMssql',
+        dsn => 'dbi:ADO:Server=foo;Port=123;Database=try;foo=1;foo=2;lol=yes;Driver=HPMssql',
         dbi => [ [Server => 'foo'], [Port => 123], [Database => 'try'] ],
         qry => [ foo => 1, foo => 2, lol => 'yes', Driver => 'HPMssql' ],
     },
     {
         uri => 'db:mssql://localhost:33/foo',
-        dsn => 'dbi:ODBC:Server=localhost;Port=33;Database=foo',
+        dsn => 'dbi:ADO:Server=localhost;Port=33;Database=foo',
         dbi => [ [Server => 'localhost'], [Port => 33], [Database => 'foo'] ],
         qry => [],
     },
     {
         uri => 'db:sqlserver://localhost:33/foo',
-        dsn => 'dbi:ODBC:Server=localhost;Port=33;Database=foo',
+        dsn => 'dbi:ADO:Server=localhost;Port=33;Database=foo',
         dbi => [ [Server => 'localhost'], [Port => 33], [Database => 'foo'] ],
         qry => [],
     },
